Fix jumping page Fix grey area height

--- a/app/styles/sass/partials/themes/matan-light/_bootswatch_overrides.scss
+++ b/app/styles/sass/partials/themes/matan-light/_bootswatch_overrides.scss
@@ -125,3 +125,7 @@ body .df-sidebar-nav {
   padding-left: 0 !important;
   padding-right: 0 !important;
 }
+
+.col-md-2.df-menu-icon, .col-md-2.df-sidebar-nav {
+  padding-left: 0px;
+}
